@startuml

title __JWT's Class Diagram__\n

  namespace br.com.psytecnology {
    namespace security.jwt {
      class br.com.psytecnology.security.jwt.JwtAuthFilter {
          + JwtAuthFilter()
          # doFilterInternal()
      }
    }
  }
  

  namespace br.com.psytecnology {
    namespace security.jwt {
      class br.com.psytecnology.security.jwt.JwtService {
          - chaveAssinatura : String
          - expiracaoToken : String
          + gerarToken()
          + obterLoginUsuario()
          + tokenValido()
          - obterClaims()
      }
    }
  }
  

  br.com.psytecnology.security.jwt.JwtAuthFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  br.com.psytecnology.security.jwt.JwtAuthFilter o-- br.com.psytecnology.security.jwt.JwtService : jwtService
  br.com.psytecnology.security.jwt.JwtAuthFilter o-- br.com.psytecnology.service.UsuarioService : usuarioService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
